kubernetes/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 300
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 2
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - name: web
        image: anataseva/kolokviumska:latest
        ports:
        - containerPort: 8000
